// Vitest Snapshot v1

exports[`context > getAllPages() > should work 1`] = `
[
  {
    "kind": "MdxPage",
    "meta": {
      "theme": {
        "timestamp": false,
        "typesetting": "article",
      },
      "type": "page",
    },
    "name": "404",
    "route": "/404",
  },
  {
    "kind": "MdxPage",
    "meta": {
      "theme": {
        "timestamp": false,
        "typesetting": "article",
      },
      "type": "page",
    },
    "name": "500",
    "route": "/500",
  },
  {
    "frontMatter": {
      "searchable": false,
      "title": "React Hooks for Data Fetching",
    },
    "kind": "MdxPage",
    "locale": "en-US",
    "meta": {
      "display": "hidden",
      "title": "Introduction",
      "type": "page",
    },
    "name": "index",
    "route": "/",
  },
  {
    "frontMatter": {
      "title": "Biblioteca React Hooks para la obtención de datos",
    },
    "kind": "MdxPage",
    "locale": "es-ES",
    "meta": {
      "display": "hidden",
      "title": "Introduction",
      "type": "page",
    },
    "name": "index",
    "route": "/",
  },
  {
    "frontMatter": {
      "title": "React хуки для получения данных",
    },
    "kind": "MdxPage",
    "locale": "ru",
    "meta": {
      "display": "hidden",
      "title": "Introduction",
      "type": "page",
    },
    "name": "index",
    "route": "/",
  },
  {
    "children": [
      {
        "kind": "MdxPage",
        "locale": "en-US",
        "name": "getting-started",
        "route": "/docs/getting-started",
      },
      {
        "kind": "MdxPage",
        "locale": "es-ES",
        "name": "getting-started",
        "route": "/docs/getting-started",
      },
      {
        "kind": "MdxPage",
        "locale": "ru",
        "name": "getting-started",
        "route": "/docs/getting-started",
      },
      {
        "kind": "MdxPage",
        "locale": "en-US",
        "name": "options",
        "route": "/docs/options",
      },
      {
        "kind": "MdxPage",
        "locale": "es-ES",
        "name": "options",
        "route": "/docs/options",
      },
      {
        "kind": "MdxPage",
        "locale": "ru",
        "name": "options",
        "route": "/docs/options",
      },
      {
        "kind": "MdxPage",
        "locale": "en-US",
        "name": "global-configuration",
        "route": "/docs/global-configuration",
      },
      {
        "kind": "MdxPage",
        "locale": "es-ES",
        "name": "global-configuration",
        "route": "/docs/global-configuration",
      },
      {
        "kind": "MdxPage",
        "locale": "ru",
        "name": "global-configuration",
        "route": "/docs/global-configuration",
      },
      {
        "kind": "MdxPage",
        "locale": "en-US",
        "name": "data-fetching",
        "route": "/docs/data-fetching",
      },
      {
        "kind": "MdxPage",
        "locale": "es-ES",
        "name": "data-fetching",
        "route": "/docs/data-fetching",
      },
      {
        "kind": "MdxPage",
        "locale": "ru",
        "name": "data-fetching",
        "route": "/docs/data-fetching",
      },
      {
        "kind": "MdxPage",
        "locale": "en-US",
        "meta": {
          "display": "hidden",
        },
        "name": "error-handling",
        "route": "/docs/error-handling",
      },
      {
        "kind": "MdxPage",
        "locale": "es-ES",
        "meta": {
          "display": "hidden",
        },
        "name": "error-handling",
        "route": "/docs/error-handling",
      },
      {
        "kind": "MdxPage",
        "locale": "ru",
        "meta": {
          "display": "hidden",
        },
        "name": "error-handling",
        "route": "/docs/error-handling",
      },
      {
        "kind": "MdxPage",
        "locale": "en-US",
        "meta": {
          "title": "Auto Revalidation",
        },
        "name": "revalidation",
        "route": "/docs/revalidation",
      },
      {
        "kind": "MdxPage",
        "locale": "es-ES",
        "meta": {
          "title": "Auto Revalidation",
        },
        "name": "revalidation",
        "route": "/docs/revalidation",
      },
      {
        "kind": "MdxPage",
        "locale": "ru",
        "meta": {
          "title": "Auto Revalidation",
        },
        "name": "revalidation",
        "route": "/docs/revalidation",
      },
      {
        "kind": "MdxPage",
        "locale": "en-US",
        "meta": {
          "title": "Conditional Data Fetching",
        },
        "name": "conditional-fetching",
        "route": "/docs/conditional-fetching",
      },
      {
        "kind": "MdxPage",
        "locale": "es-ES",
        "meta": {
          "title": "Conditional Data Fetching",
        },
        "name": "conditional-fetching",
        "route": "/docs/conditional-fetching",
      },
      {
        "kind": "MdxPage",
        "locale": "ru",
        "meta": {
          "title": "Conditional Data Fetching",
        },
        "name": "conditional-fetching",
        "route": "/docs/conditional-fetching",
      },
      {
        "kind": "MdxPage",
        "locale": "en-US",
        "name": "arguments",
        "route": "/docs/arguments",
      },
      {
        "kind": "MdxPage",
        "locale": "es-ES",
        "name": "arguments",
        "route": "/docs/arguments",
      },
      {
        "kind": "MdxPage",
        "locale": "ru",
        "name": "arguments",
        "route": "/docs/arguments",
      },
      {
        "kind": "MdxPage",
        "locale": "en-US",
        "name": "mutation",
        "route": "/docs/mutation",
      },
      {
        "kind": "MdxPage",
        "locale": "es-ES",
        "name": "mutation",
        "route": "/docs/mutation",
      },
      {
        "kind": "MdxPage",
        "locale": "ru",
        "name": "mutation",
        "route": "/docs/mutation",
      },
      {
        "kind": "MdxPage",
        "locale": "en-US",
        "name": "pagination",
        "route": "/docs/pagination",
      },
      {
        "kind": "MdxPage",
        "locale": "es-ES",
        "name": "pagination",
        "route": "/docs/pagination",
      },
      {
        "kind": "MdxPage",
        "locale": "ru",
        "name": "pagination",
        "route": "/docs/pagination",
      },
      {
        "kind": "MdxPage",
        "locale": "en-US",
        "name": "prefetching",
        "route": "/docs/prefetching",
      },
      {
        "kind": "MdxPage",
        "locale": "es-ES",
        "name": "prefetching",
        "route": "/docs/prefetching",
      },
      {
        "kind": "MdxPage",
        "locale": "ru",
        "name": "prefetching",
        "route": "/docs/prefetching",
      },
      {
        "kind": "MdxPage",
        "locale": "en-US",
        "meta": {
          "title": "Next.js SSG and SSR",
        },
        "name": "with-nextjs",
        "route": "/docs/with-nextjs",
      },
      {
        "kind": "MdxPage",
        "locale": "es-ES",
        "meta": {
          "title": "Next.js SSG and SSR",
        },
        "name": "with-nextjs",
        "route": "/docs/with-nextjs",
      },
      {
        "kind": "MdxPage",
        "locale": "ru",
        "meta": {
          "title": "Next.js SSG and SSR",
        },
        "name": "with-nextjs",
        "route": "/docs/with-nextjs",
      },
      {
        "kind": "MdxPage",
        "locale": "en-US",
        "meta": {
          "title": "TypeScript :)",
        },
        "name": "typescript",
        "route": "/docs/typescript",
      },
      {
        "kind": "MdxPage",
        "locale": "en-US",
        "name": "suspense",
        "route": "/docs/suspense",
      },
      {
        "kind": "MdxPage",
        "locale": "es-ES",
        "name": "suspense",
        "route": "/docs/suspense",
      },
      {
        "kind": "MdxPage",
        "locale": "ru",
        "name": "suspense",
        "route": "/docs/suspense",
      },
      {
        "kind": "MdxPage",
        "locale": "en-US",
        "name": "middleware",
        "route": "/docs/middleware",
      },
      {
        "kind": "MdxPage",
        "locale": "ru",
        "name": "middleware",
        "route": "/docs/middleware",
      },
      {
        "children": [
          {
            "children": [
              {
                "kind": "MdxPage",
                "locale": "en-US",
                "name": "loooooooooooooooooooong-title",
                "route": "/docs/advanced/more/loooooooooooooooooooong-title",
              },
              {
                "children": [
                  {
                    "kind": "MdxPage",
                    "locale": "en-US",
                    "name": "one",
                    "route": "/docs/advanced/more/tree/one",
                  },
                  {
                    "kind": "MdxPage",
                    "locale": "en-US",
                    "name": "three",
                    "route": "/docs/advanced/more/tree/three",
                  },
                  {
                    "kind": "MdxPage",
                    "locale": "en-US",
                    "name": "two",
                    "route": "/docs/advanced/more/tree/two",
                  },
                ],
                "kind": "Folder",
                "name": "tree",
                "route": "/docs/advanced/more/tree",
              },
            ],
            "kind": "Folder",
            "meta": {
              "title": "More: A Super Super Super Super Long Directory",
            },
            "name": "more",
            "route": "/docs/advanced/more",
          },
          {
            "kind": "MdxPage",
            "locale": "en-US",
            "meta": {
              "title": "Filenames with Dots",
            },
            "name": "file-name.with.DOTS",
            "route": "/docs/advanced/file-name.with.DOTS",
          },
          {
            "kind": "MdxPage",
            "locale": "es-ES",
            "meta": {
              "title": "Filenames with Dots",
            },
            "name": "file-name.with.DOTS",
            "route": "/docs/advanced/file-name.with.DOTS",
          },
          {
            "kind": "MdxPage",
            "locale": "ru",
            "meta": {
              "title": "Filenames with Dots",
            },
            "name": "file-name.with.DOTS",
            "route": "/docs/advanced/file-name.with.DOTS",
          },
          {
            "kind": "MdxPage",
            "locale": "en-US",
            "name": "cache",
            "route": "/docs/advanced/cache",
          },
          {
            "kind": "MdxPage",
            "locale": "ru",
            "name": "cache",
            "route": "/docs/advanced/cache",
          },
          {
            "kind": "MdxPage",
            "locale": "en-US",
            "name": "code-highlighting",
            "route": "/docs/advanced/code-highlighting",
          },
          {
            "kind": "MdxPage",
            "locale": "en-US",
            "name": "dynamic-markdown-import",
            "route": "/docs/advanced/dynamic-markdown-import",
          },
          {
            "kind": "MdxPage",
            "locale": "en-US",
            "name": "images",
            "route": "/docs/advanced/images",
          },
          {
            "kind": "MdxPage",
            "locale": "en-US",
            "name": "markdown-import",
            "route": "/docs/advanced/markdown-import",
          },
          {
            "kind": "MdxPage",
            "locale": "en-US",
            "name": "performance",
            "route": "/docs/advanced/performance",
          },
          {
            "kind": "MdxPage",
            "locale": "es-ES",
            "name": "performance",
            "route": "/docs/advanced/performance",
          },
          {
            "kind": "MdxPage",
            "locale": "ru",
            "name": "performance",
            "route": "/docs/advanced/performance",
          },
          {
            "kind": "MdxPage",
            "locale": "en-US",
            "name": "react-native",
            "route": "/docs/advanced/react-native",
          },
          {
            "kind": "MdxPage",
            "locale": "ru",
            "name": "react-native",
            "route": "/docs/advanced/react-native",
          },
          {
            "kind": "MdxPage",
            "locale": "en-US",
            "name": "scrollbar-x",
            "route": "/docs/advanced/scrollbar-x",
          },
        ],
        "kind": "Folder",
        "name": "advanced",
        "route": "/docs/advanced",
      },
      {
        "kind": "MdxPage",
        "locale": "en-US",
        "name": "advanced",
        "route": "/docs/advanced",
      },
      {
        "kind": "MdxPage",
        "locale": "en-US",
        "meta": {
          "theme": {
            "sidebar": false,
          },
        },
        "name": "change-log",
        "route": "/docs/change-log",
      },
      {
        "kind": "MdxPage",
        "locale": "es-ES",
        "meta": {
          "theme": {
            "sidebar": false,
          },
        },
        "name": "change-log",
        "route": "/docs/change-log",
      },
      {
        "kind": "MdxPage",
        "locale": "ru",
        "meta": {
          "theme": {
            "sidebar": false,
          },
        },
        "name": "change-log",
        "route": "/docs/change-log",
      },
      {
        "kind": "MdxPage",
        "locale": "en-US",
        "meta": {
          "title": "Wrap Table of Content Items",
        },
        "name": "wrap-toc-items",
        "route": "/docs/wrap-toc-items",
      },
      {
        "kind": "MdxPage",
        "locale": "es-ES",
        "meta": {
          "title": "Wrap Table of Content Items",
        },
        "name": "wrap-toc-items",
        "route": "/docs/wrap-toc-items",
      },
      {
        "kind": "MdxPage",
        "locale": "ru",
        "meta": {
          "title": "Wrap Table of Content Items",
        },
        "name": "wrap-toc-items",
        "route": "/docs/wrap-toc-items",
      },
      {
        "kind": "MdxPage",
        "locale": "en-US",
        "meta": {
          "title": "Custom Header IDs",
        },
        "name": "custom-header-ids",
        "route": "/docs/custom-header-ids",
      },
      {
        "kind": "MdxPage",
        "locale": "en-US",
        "meta": {
          "title": "404/500 Custom Error Pages",
        },
        "name": "404-500",
        "route": "/docs/404-500",
      },
      {
        "kind": "MdxPage",
        "locale": "en-US",
        "meta": {
          "theme": {
            "layout": "raw",
          },
        },
        "name": "raw-layout",
        "route": "/docs/raw-layout",
      },
      {
        "kind": "MdxPage",
        "locale": "en-US",
        "name": "callout",
        "route": "/docs/callout",
      },
      {
        "kind": "MdxPage",
        "locale": "en-US",
        "name": "code-block-without-language",
        "route": "/docs/code-block-without-language",
      },
      {
        "kind": "MdxPage",
        "locale": "en-US",
        "name": "understanding",
        "route": "/docs/understanding",
      },
      {
        "kind": "MdxPage",
        "locale": "es-ES",
        "name": "understanding",
        "route": "/docs/understanding",
      },
      {
        "kind": "MdxPage",
        "locale": "ru",
        "name": "understanding",
        "route": "/docs/understanding",
      },
    ],
    "kind": "Folder",
    "meta": {
      "title": "Docs",
      "type": "page",
    },
    "name": "docs",
    "route": "/docs",
  },
  {
    "children": [
      {
        "children": [],
        "kind": "Folder",
        "name": "graphql-eslint",
        "route": "/remote/graphql-eslint",
      },
      {
        "children": [],
        "kind": "Folder",
        "name": "graphql-yoga",
        "route": "/remote/graphql-yoga",
      },
    ],
    "kind": "Folder",
    "meta": {
      "href": "/remote/4423220",
      "title": "Remote",
      "type": "page",
    },
    "name": "remote",
    "route": "/remote",
  },
  {
    "children": [
      {
        "kind": "MdxPage",
        "locale": "en-US",
        "meta": {
          "title": "👥 Team",
        },
        "name": "team",
        "route": "/about/team",
      },
      {
        "kind": "MdxPage",
        "locale": "en-US",
        "meta": {
          "title": "🧩 Acknowledgement",
        },
        "name": "acknowledgement",
        "route": "/about/acknowledgement",
      },
      {
        "kind": "MdxPage",
        "locale": "en-US",
        "meta": {
          "display": "hidden",
          "theme": {
            "layout": "raw",
          },
          "type": "page",
        },
        "name": "a-page",
        "route": "/about/a-page",
      },
      {
        "kind": "MdxPage",
        "locale": "en-US",
        "name": "changelog",
        "route": "/about/changelog",
      },
    ],
    "kind": "Folder",
    "meta": {
      "items": {
        "a-page": {
          "title": "A Page",
        },
        "acknowledgement": {
          "title": "Acknowledgement",
        },
        "changelog": {
          "title": "Changelog",
        },
        "contributors": {
          "href": "https://github.com/vercel/swr/graphs/contributors",
          "newWindow": true,
          "title": "Contributors",
        },
        "team": {
          "title": "Team",
        },
      },
      "title": "About",
      "type": "menu",
    },
    "name": "about",
    "route": "/about",
  },
  {
    "children": [
      {
        "frontMatter": {
          "full": true,
          "title": "Basic Usage",
        },
        "kind": "MdxPage",
        "locale": "en-US",
        "meta": {
          "title": "Basic Usage",
        },
        "name": "basic",
        "route": "/examples/basic",
      },
      {
        "frontMatter": {
          "full": true,
          "title": "Uso Básico",
        },
        "kind": "MdxPage",
        "locale": "es-ES",
        "meta": {
          "title": "Basic Usage",
        },
        "name": "basic",
        "route": "/examples/basic",
      },
      {
        "frontMatter": {
          "full": true,
          "title": "Основное использование",
        },
        "kind": "MdxPage",
        "locale": "ru",
        "meta": {
          "title": "Basic Usage",
        },
        "name": "basic",
        "route": "/examples/basic",
      },
      {
        "frontMatter": {
          "full": true,
          "title": "Authentication",
        },
        "kind": "MdxPage",
        "locale": "en-US",
        "meta": {
          "title": "Authentication",
        },
        "name": "auth",
        "route": "/examples/auth",
      },
      {
        "frontMatter": {
          "full": true,
          "title": "Autenticación",
        },
        "kind": "MdxPage",
        "locale": "es-ES",
        "meta": {
          "title": "Authentication",
        },
        "name": "auth",
        "route": "/examples/auth",
      },
      {
        "frontMatter": {
          "full": true,
          "title": "Аутентификация",
        },
        "kind": "MdxPage",
        "locale": "ru",
        "meta": {
          "title": "Authentication",
        },
        "name": "auth",
        "route": "/examples/auth",
      },
      {
        "frontMatter": {
          "full": true,
          "title": "Infinite Loading",
        },
        "kind": "MdxPage",
        "locale": "en-US",
        "name": "infinite-loading",
        "route": "/examples/infinite-loading",
      },
      {
        "frontMatter": {
          "full": true,
          "title": "Carga Infinita",
        },
        "kind": "MdxPage",
        "locale": "es-ES",
        "name": "infinite-loading",
        "route": "/examples/infinite-loading",
      },
      {
        "frontMatter": {
          "full": true,
          "title": "Бесконечная загрузка",
        },
        "kind": "MdxPage",
        "locale": "ru",
        "name": "infinite-loading",
        "route": "/examples/infinite-loading",
      },
      {
        "frontMatter": {
          "full": true,
          "title": "Error Handling",
        },
        "kind": "MdxPage",
        "locale": "en-US",
        "name": "error-handling",
        "route": "/examples/error-handling",
      },
      {
        "frontMatter": {
          "full": true,
          "title": "Manejo De Errores",
        },
        "kind": "MdxPage",
        "locale": "es-ES",
        "name": "error-handling",
        "route": "/examples/error-handling",
      },
      {
        "frontMatter": {
          "full": true,
          "title": "Обработка ошибок",
        },
        "kind": "MdxPage",
        "locale": "ru",
        "name": "error-handling",
        "route": "/examples/error-handling",
      },
      {
        "frontMatter": {
          "full": true,
          "title": "Next.js SSR",
        },
        "kind": "MdxPage",
        "locale": "en-US",
        "meta": {
          "title": "Next.js SSR",
        },
        "name": "ssr",
        "route": "/examples/ssr",
      },
      {
        "frontMatter": {
          "full": true,
          "title": "Next.js SSR",
        },
        "kind": "MdxPage",
        "locale": "ru",
        "meta": {
          "title": "Next.js SSR",
        },
        "name": "ssr",
        "route": "/examples/ssr",
      },
      {
        "kind": "MdxPage",
        "locale": "en-US",
        "meta": {
          "theme": {
            "layout": "raw",
          },
        },
        "name": "full",
        "route": "/examples/full",
      },
    ],
    "kind": "Folder",
    "meta": {
      "theme": {
        "layout": "full",
      },
      "title": "Examples",
      "type": "page",
    },
    "name": "examples",
    "route": "/examples",
  },
  {
    "children": [
      {
        "frontMatter": {
          "description": "Almost 2 years ago we open sourced SWR, the tiny data-fetching React library that people love. Today we are reaching another milestone: the 1.0 version of SWR.",
          "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
        },
        "kind": "MdxPage",
        "locale": "en-US",
        "meta": {
          "theme": {
            "breadcrumb": true,
          },
          "title": "Announcing SWR 1.0",
        },
        "name": "swr-v1",
        "route": "/blog/swr-v1",
      },
      {
        "frontMatter": {
          "description": "Почти 2 года назад мы сделали SWR — крошечную React библиотеку с открытым исходным кодом для выборки данных, которую люди полюбили. Сегодня мы приближаемся к еще одной вехе: версии 1.0 SWR!",
          "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
        },
        "kind": "MdxPage",
        "locale": "ru",
        "meta": {
          "theme": {
            "breadcrumb": true,
          },
          "title": "Announcing SWR 1.0",
        },
        "name": "swr-v1",
        "route": "/blog/swr-v1",
      },
    ],
    "kind": "Folder",
    "meta": {
      "theme": {
        "breadcrumb": false,
        "footer": true,
        "sidebar": false,
        "toc": true,
        "typesetting": "article",
      },
      "title": "Blog",
      "type": "page",
    },
    "name": "blog",
    "route": "/blog",
  },
  {
    "frontMatter": {
      "searchable": false,
    },
    "kind": "MdxPage",
    "locale": "en-US",
    "meta": {
      "theme": {
        "breadcrumb": false,
        "footer": true,
        "sidebar": false,
        "toc": true,
        "typesetting": "article",
      },
      "title": "Blog",
      "type": "page",
    },
    "name": "blog",
    "route": "/blog",
  },
  {
    "frontMatter": {
      "mdxOptions": {
        "format": "md",
      },
    },
    "kind": "MdxPage",
    "locale": "en-US",
    "name": "test",
    "route": "/test",
  },
]
`;

exports[`context > getCurrentLevelPages() > should work 1`] = `
[
  {
    "kind": "MdxPage",
    "locale": "en-US",
    "name": "getting-started",
    "route": "/docs/getting-started",
  },
  {
    "kind": "MdxPage",
    "locale": "es-ES",
    "name": "getting-started",
    "route": "/docs/getting-started",
  },
  {
    "kind": "MdxPage",
    "locale": "ru",
    "name": "getting-started",
    "route": "/docs/getting-started",
  },
  {
    "kind": "MdxPage",
    "locale": "en-US",
    "name": "options",
    "route": "/docs/options",
  },
  {
    "kind": "MdxPage",
    "locale": "es-ES",
    "name": "options",
    "route": "/docs/options",
  },
  {
    "kind": "MdxPage",
    "locale": "ru",
    "name": "options",
    "route": "/docs/options",
  },
  {
    "kind": "MdxPage",
    "locale": "en-US",
    "name": "global-configuration",
    "route": "/docs/global-configuration",
  },
  {
    "kind": "MdxPage",
    "locale": "es-ES",
    "name": "global-configuration",
    "route": "/docs/global-configuration",
  },
  {
    "kind": "MdxPage",
    "locale": "ru",
    "name": "global-configuration",
    "route": "/docs/global-configuration",
  },
  {
    "kind": "MdxPage",
    "locale": "en-US",
    "name": "data-fetching",
    "route": "/docs/data-fetching",
  },
  {
    "kind": "MdxPage",
    "locale": "es-ES",
    "name": "data-fetching",
    "route": "/docs/data-fetching",
  },
  {
    "kind": "MdxPage",
    "locale": "ru",
    "name": "data-fetching",
    "route": "/docs/data-fetching",
  },
  {
    "kind": "MdxPage",
    "locale": "en-US",
    "meta": {
      "display": "hidden",
    },
    "name": "error-handling",
    "route": "/docs/error-handling",
  },
  {
    "kind": "MdxPage",
    "locale": "es-ES",
    "meta": {
      "display": "hidden",
    },
    "name": "error-handling",
    "route": "/docs/error-handling",
  },
  {
    "kind": "MdxPage",
    "locale": "ru",
    "meta": {
      "display": "hidden",
    },
    "name": "error-handling",
    "route": "/docs/error-handling",
  },
  {
    "kind": "MdxPage",
    "locale": "en-US",
    "meta": {
      "title": "Auto Revalidation",
    },
    "name": "revalidation",
    "route": "/docs/revalidation",
  },
  {
    "kind": "MdxPage",
    "locale": "es-ES",
    "meta": {
      "title": "Auto Revalidation",
    },
    "name": "revalidation",
    "route": "/docs/revalidation",
  },
  {
    "kind": "MdxPage",
    "locale": "ru",
    "meta": {
      "title": "Auto Revalidation",
    },
    "name": "revalidation",
    "route": "/docs/revalidation",
  },
  {
    "kind": "MdxPage",
    "locale": "en-US",
    "meta": {
      "title": "Conditional Data Fetching",
    },
    "name": "conditional-fetching",
    "route": "/docs/conditional-fetching",
  },
  {
    "kind": "MdxPage",
    "locale": "es-ES",
    "meta": {
      "title": "Conditional Data Fetching",
    },
    "name": "conditional-fetching",
    "route": "/docs/conditional-fetching",
  },
  {
    "kind": "MdxPage",
    "locale": "ru",
    "meta": {
      "title": "Conditional Data Fetching",
    },
    "name": "conditional-fetching",
    "route": "/docs/conditional-fetching",
  },
  {
    "kind": "MdxPage",
    "locale": "en-US",
    "name": "arguments",
    "route": "/docs/arguments",
  },
  {
    "kind": "MdxPage",
    "locale": "es-ES",
    "name": "arguments",
    "route": "/docs/arguments",
  },
  {
    "kind": "MdxPage",
    "locale": "ru",
    "name": "arguments",
    "route": "/docs/arguments",
  },
  {
    "kind": "MdxPage",
    "locale": "en-US",
    "name": "mutation",
    "route": "/docs/mutation",
  },
  {
    "kind": "MdxPage",
    "locale": "es-ES",
    "name": "mutation",
    "route": "/docs/mutation",
  },
  {
    "kind": "MdxPage",
    "locale": "ru",
    "name": "mutation",
    "route": "/docs/mutation",
  },
  {
    "kind": "MdxPage",
    "locale": "en-US",
    "name": "pagination",
    "route": "/docs/pagination",
  },
  {
    "kind": "MdxPage",
    "locale": "es-ES",
    "name": "pagination",
    "route": "/docs/pagination",
  },
  {
    "kind": "MdxPage",
    "locale": "ru",
    "name": "pagination",
    "route": "/docs/pagination",
  },
  {
    "kind": "MdxPage",
    "locale": "en-US",
    "name": "prefetching",
    "route": "/docs/prefetching",
  },
  {
    "kind": "MdxPage",
    "locale": "es-ES",
    "name": "prefetching",
    "route": "/docs/prefetching",
  },
  {
    "kind": "MdxPage",
    "locale": "ru",
    "name": "prefetching",
    "route": "/docs/prefetching",
  },
  {
    "kind": "MdxPage",
    "locale": "en-US",
    "meta": {
      "title": "Next.js SSG and SSR",
    },
    "name": "with-nextjs",
    "route": "/docs/with-nextjs",
  },
  {
    "kind": "MdxPage",
    "locale": "es-ES",
    "meta": {
      "title": "Next.js SSG and SSR",
    },
    "name": "with-nextjs",
    "route": "/docs/with-nextjs",
  },
  {
    "kind": "MdxPage",
    "locale": "ru",
    "meta": {
      "title": "Next.js SSG and SSR",
    },
    "name": "with-nextjs",
    "route": "/docs/with-nextjs",
  },
  {
    "kind": "MdxPage",
    "locale": "en-US",
    "meta": {
      "title": "TypeScript :)",
    },
    "name": "typescript",
    "route": "/docs/typescript",
  },
  {
    "kind": "MdxPage",
    "locale": "en-US",
    "name": "suspense",
    "route": "/docs/suspense",
  },
  {
    "kind": "MdxPage",
    "locale": "es-ES",
    "name": "suspense",
    "route": "/docs/suspense",
  },
  {
    "kind": "MdxPage",
    "locale": "ru",
    "name": "suspense",
    "route": "/docs/suspense",
  },
  {
    "kind": "MdxPage",
    "locale": "en-US",
    "name": "middleware",
    "route": "/docs/middleware",
  },
  {
    "kind": "MdxPage",
    "locale": "ru",
    "name": "middleware",
    "route": "/docs/middleware",
  },
  {
    "children": [
      {
        "children": [
          {
            "kind": "MdxPage",
            "locale": "en-US",
            "name": "loooooooooooooooooooong-title",
            "route": "/docs/advanced/more/loooooooooooooooooooong-title",
          },
          {
            "children": [
              {
                "kind": "MdxPage",
                "locale": "en-US",
                "name": "one",
                "route": "/docs/advanced/more/tree/one",
              },
              {
                "kind": "MdxPage",
                "locale": "en-US",
                "name": "three",
                "route": "/docs/advanced/more/tree/three",
              },
              {
                "kind": "MdxPage",
                "locale": "en-US",
                "name": "two",
                "route": "/docs/advanced/more/tree/two",
              },
            ],
            "kind": "Folder",
            "name": "tree",
            "route": "/docs/advanced/more/tree",
          },
        ],
        "kind": "Folder",
        "meta": {
          "title": "More: A Super Super Super Super Long Directory",
        },
        "name": "more",
        "route": "/docs/advanced/more",
      },
      {
        "kind": "MdxPage",
        "locale": "en-US",
        "meta": {
          "title": "Filenames with Dots",
        },
        "name": "file-name.with.DOTS",
        "route": "/docs/advanced/file-name.with.DOTS",
      },
      {
        "kind": "MdxPage",
        "locale": "es-ES",
        "meta": {
          "title": "Filenames with Dots",
        },
        "name": "file-name.with.DOTS",
        "route": "/docs/advanced/file-name.with.DOTS",
      },
      {
        "kind": "MdxPage",
        "locale": "ru",
        "meta": {
          "title": "Filenames with Dots",
        },
        "name": "file-name.with.DOTS",
        "route": "/docs/advanced/file-name.with.DOTS",
      },
      {
        "kind": "MdxPage",
        "locale": "en-US",
        "name": "cache",
        "route": "/docs/advanced/cache",
      },
      {
        "kind": "MdxPage",
        "locale": "ru",
        "name": "cache",
        "route": "/docs/advanced/cache",
      },
      {
        "kind": "MdxPage",
        "locale": "en-US",
        "name": "code-highlighting",
        "route": "/docs/advanced/code-highlighting",
      },
      {
        "kind": "MdxPage",
        "locale": "en-US",
        "name": "dynamic-markdown-import",
        "route": "/docs/advanced/dynamic-markdown-import",
      },
      {
        "kind": "MdxPage",
        "locale": "en-US",
        "name": "images",
        "route": "/docs/advanced/images",
      },
      {
        "kind": "MdxPage",
        "locale": "en-US",
        "name": "markdown-import",
        "route": "/docs/advanced/markdown-import",
      },
      {
        "kind": "MdxPage",
        "locale": "en-US",
        "name": "performance",
        "route": "/docs/advanced/performance",
      },
      {
        "kind": "MdxPage",
        "locale": "es-ES",
        "name": "performance",
        "route": "/docs/advanced/performance",
      },
      {
        "kind": "MdxPage",
        "locale": "ru",
        "name": "performance",
        "route": "/docs/advanced/performance",
      },
      {
        "kind": "MdxPage",
        "locale": "en-US",
        "name": "react-native",
        "route": "/docs/advanced/react-native",
      },
      {
        "kind": "MdxPage",
        "locale": "ru",
        "name": "react-native",
        "route": "/docs/advanced/react-native",
      },
      {
        "kind": "MdxPage",
        "locale": "en-US",
        "name": "scrollbar-x",
        "route": "/docs/advanced/scrollbar-x",
      },
    ],
    "kind": "Folder",
    "name": "advanced",
    "route": "/docs/advanced",
  },
  {
    "kind": "MdxPage",
    "locale": "en-US",
    "name": "advanced",
    "route": "/docs/advanced",
  },
  {
    "kind": "MdxPage",
    "locale": "en-US",
    "meta": {
      "theme": {
        "sidebar": false,
      },
    },
    "name": "change-log",
    "route": "/docs/change-log",
  },
  {
    "kind": "MdxPage",
    "locale": "es-ES",
    "meta": {
      "theme": {
        "sidebar": false,
      },
    },
    "name": "change-log",
    "route": "/docs/change-log",
  },
  {
    "kind": "MdxPage",
    "locale": "ru",
    "meta": {
      "theme": {
        "sidebar": false,
      },
    },
    "name": "change-log",
    "route": "/docs/change-log",
  },
  {
    "kind": "MdxPage",
    "locale": "en-US",
    "meta": {
      "title": "Wrap Table of Content Items",
    },
    "name": "wrap-toc-items",
    "route": "/docs/wrap-toc-items",
  },
  {
    "kind": "MdxPage",
    "locale": "es-ES",
    "meta": {
      "title": "Wrap Table of Content Items",
    },
    "name": "wrap-toc-items",
    "route": "/docs/wrap-toc-items",
  },
  {
    "kind": "MdxPage",
    "locale": "ru",
    "meta": {
      "title": "Wrap Table of Content Items",
    },
    "name": "wrap-toc-items",
    "route": "/docs/wrap-toc-items",
  },
  {
    "kind": "MdxPage",
    "locale": "en-US",
    "meta": {
      "title": "Custom Header IDs",
    },
    "name": "custom-header-ids",
    "route": "/docs/custom-header-ids",
  },
  {
    "kind": "MdxPage",
    "locale": "en-US",
    "meta": {
      "title": "404/500 Custom Error Pages",
    },
    "name": "404-500",
    "route": "/docs/404-500",
  },
  {
    "kind": "MdxPage",
    "locale": "en-US",
    "meta": {
      "theme": {
        "layout": "raw",
      },
    },
    "name": "raw-layout",
    "route": "/docs/raw-layout",
  },
  {
    "kind": "MdxPage",
    "locale": "en-US",
    "name": "callout",
    "route": "/docs/callout",
  },
  {
    "kind": "MdxPage",
    "locale": "en-US",
    "name": "code-block-without-language",
    "route": "/docs/code-block-without-language",
  },
  {
    "kind": "MdxPage",
    "locale": "en-US",
    "name": "understanding",
    "route": "/docs/understanding",
  },
  {
    "kind": "MdxPage",
    "locale": "es-ES",
    "name": "understanding",
    "route": "/docs/understanding",
  },
  {
    "kind": "MdxPage",
    "locale": "ru",
    "name": "understanding",
    "route": "/docs/understanding",
  },
]
`;

exports[`context > getPagesUnderRoute() > should work 1`] = `
[
  {
    "children": [
      {
        "kind": "MdxPage",
        "locale": "en-US",
        "name": "loooooooooooooooooooong-title",
        "route": "/docs/advanced/more/loooooooooooooooooooong-title",
      },
      {
        "children": [
          {
            "kind": "MdxPage",
            "locale": "en-US",
            "name": "one",
            "route": "/docs/advanced/more/tree/one",
          },
          {
            "kind": "MdxPage",
            "locale": "en-US",
            "name": "three",
            "route": "/docs/advanced/more/tree/three",
          },
          {
            "kind": "MdxPage",
            "locale": "en-US",
            "name": "two",
            "route": "/docs/advanced/more/tree/two",
          },
        ],
        "kind": "Folder",
        "name": "tree",
        "route": "/docs/advanced/more/tree",
      },
    ],
    "kind": "Folder",
    "meta": {
      "title": "More: A Super Super Super Super Long Directory",
    },
    "name": "more",
    "route": "/docs/advanced/more",
  },
  {
    "kind": "MdxPage",
    "locale": "en-US",
    "meta": {
      "title": "Filenames with Dots",
    },
    "name": "file-name.with.DOTS",
    "route": "/docs/advanced/file-name.with.DOTS",
  },
  {
    "kind": "MdxPage",
    "locale": "es-ES",
    "meta": {
      "title": "Filenames with Dots",
    },
    "name": "file-name.with.DOTS",
    "route": "/docs/advanced/file-name.with.DOTS",
  },
  {
    "kind": "MdxPage",
    "locale": "ru",
    "meta": {
      "title": "Filenames with Dots",
    },
    "name": "file-name.with.DOTS",
    "route": "/docs/advanced/file-name.with.DOTS",
  },
  {
    "kind": "MdxPage",
    "locale": "en-US",
    "name": "cache",
    "route": "/docs/advanced/cache",
  },
  {
    "kind": "MdxPage",
    "locale": "ru",
    "name": "cache",
    "route": "/docs/advanced/cache",
  },
  {
    "kind": "MdxPage",
    "locale": "en-US",
    "name": "code-highlighting",
    "route": "/docs/advanced/code-highlighting",
  },
  {
    "kind": "MdxPage",
    "locale": "en-US",
    "name": "dynamic-markdown-import",
    "route": "/docs/advanced/dynamic-markdown-import",
  },
  {
    "kind": "MdxPage",
    "locale": "en-US",
    "name": "images",
    "route": "/docs/advanced/images",
  },
  {
    "kind": "MdxPage",
    "locale": "en-US",
    "name": "markdown-import",
    "route": "/docs/advanced/markdown-import",
  },
  {
    "kind": "MdxPage",
    "locale": "en-US",
    "name": "performance",
    "route": "/docs/advanced/performance",
  },
  {
    "kind": "MdxPage",
    "locale": "es-ES",
    "name": "performance",
    "route": "/docs/advanced/performance",
  },
  {
    "kind": "MdxPage",
    "locale": "ru",
    "name": "performance",
    "route": "/docs/advanced/performance",
  },
  {
    "kind": "MdxPage",
    "locale": "en-US",
    "name": "react-native",
    "route": "/docs/advanced/react-native",
  },
  {
    "kind": "MdxPage",
    "locale": "ru",
    "name": "react-native",
    "route": "/docs/advanced/react-native",
  },
  {
    "kind": "MdxPage",
    "locale": "en-US",
    "name": "scrollbar-x",
    "route": "/docs/advanced/scrollbar-x",
  },
]
`;
